--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'persons:login' %}">Логин</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'persons:register' %}">Регистрация</a>
+        </li>
           {% endif %}
       </ul>
     </div>
