--- a/persons/templates/persons/index.html
+++ b/persons/templates/persons/index.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
+{% load person_tags %}
 {% block title %}Главная{% endblock %}
 {% block content %}
     <h1 class="text-center text-primary">Smart To Do</h1>
     <hr>
+    <ul class="list-group" style="margin: 0 50px; box-shadow: 10px -5px 5px rgba(0, 0, 255, 0.1);">
+        <li class="list-group-item active" aria-current="true">E-mail: {{ person.email }}</li>
+        <li class="list-group-item">Имя: {{ person.first_name }}</li>
+        <li class="list-group-item">Фамилия: {{ person.last_name }}</li>
+        <li class="list-group-item">Задачи: {% task_count person.id %}</li>
+    </ul>
 {% endblock %}
