--- a/persons/templates/persons/login.html
+++ b/persons/templates/persons/login.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1 class="text-primary text-center">Добро пожаловать в веб приложение<br><strong style="color: orangered"> Smart To Do</strong></h1>
         <hr>
-    <form method="post">
+    <form method="post" class="container-fluid">
     {% csrf_token %}
   <div class="mb-3">
     <label for="email" class="form-label">Email: </label>
