--- a/persons/templates/persons/register.html
+++ b/persons/templates/persons/register.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1 class="text-primary text-center">Регистрация</h1>
     <hr>
-    <form method="post">
+    <form method="post" class="container-fluid">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-success">Создать</button>
