--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         </li>
           {% else %}
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'persons:login' %}">Логин</a>
+          <a class="nav-link" href="{% url 'persons:login' %}">Вход</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'persons:register' %}">Регистрация</a>
