--- a/persons/templates/persons/register.html
+++ b/persons/templates/persons/register.html
@@ -3,10 +3,33 @@
 {% block content %}
     <h1 class="text-primary text-center">Регистрация</h1>
     <hr>
-    <form method="post" class="container-fluid">
+    <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-success">Создать</button>
+  <div class="mb-3">
+    <label for="email" class="form-label">E-mail:</label>
+    <input required type="text" class="form-control" id="email" name="email">
+  </div>
+  <div class="mb-3">
+    <label for="password" class="form-label">Пароль:</label>
+    <input required type="password" class="form-control" id="password" name="password">
+  </div>
+        <div class="mb-3">
+    <label for="password_2" class="form-label">Подтверждение пароля:</label>
+    <input required type="password" class="form-control" id="password_2" name="password_2">
+  </div>
+        <div class="mb-3">
+    <label for="first_name" class="form-label">Имя:</label>
+    <input required type="text" class="form-control" id="first_name" name="first_name">
+  </div>
+        <div class="mb-3">
+    <label for="last_name" class="form-label">Фамилия:</label>
+    <input required type="text" class="form-control" id="last_name" name="last_name">
+  </div>
+        <div class="mb-3">
+    <label for="tg_id" class="form-label">Телеграмм id:</label>
+    <input type="text" class="form-control" id="tg_id" name="tg_id">
+  </div>
+  <button type="submit" class="btn btn-success">Отправить</button>
 </form>
 {% endblock %}
 {% block js %}
