--- a/persons/templates/persons/task_list.html
+++ b/persons/templates/persons/task_list.html
@@ -14,6 +14,7 @@
     <li class="list-group-item">Описание: {{ task.description }}</li>
     <li class="list-group-item">Текст: {{ task.text }}</li>
         <li class="list-group-item">Статус: {% if task.status == 1 %}<span class="text-success">Готова</span>{% elif task.status == None %}Не готова{% else %}<span class="text-danger">Отменена</span>{% endif %}</li>
+        <li class="list-group-item"><a href="{% url 'persons:update_task' task.id %}" class="btn btn-warning">Изменить</a> | <a href="{% url 'persons:delete_task' task.id %}" class="btn btn-danger" onclick="return confirm('Вы действительно хотите удалить эту задачу?')">Удалить</a> </li>
     </ul>
 </div>
         <br>
