--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,14 @@
       </ul>
       <ul class="navbar-nav ms-auto">
           {% if request.user.is_authenticated %}
-          <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'persons:logout' %}">Выход</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            {{ request.user.email }}
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="{% url "persons:settings" %}">Настройки</a></li>
+            <li><a class="dropdown-item" href="{% url "persons:logout" %}">Выход</a></li>
+          </ul>
         </li>
           {% else %}
         <li class="nav-item">
