--- a/persons/templates/persons/settings.html
+++ b/persons/templates/persons/settings.html
@@ -3,11 +3,13 @@
 {% block content %}
     <h1 class="text-primary text-center">Настройка <strong>пользователя</strong></h1>
     <hr>
+    <div class="container-fluid">
     <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-success">Сохранить</button>
     </form>
+    </div>
 {% endblock %}
 {% block js %}
     <script>
