--- a/persons/templates/persons/task_list.html
+++ b/persons/templates/persons/task_list.html
@@ -8,13 +8,14 @@
     <a href="{% url 'persons:create_task' %}" class="btn btn-success"> + Создать</a>
     <hr>
     {% for task in tasks %}
-    <div class="card" style="width: 18rem;">
+    <div class="card">
     <ul class="list-group list-group-flush">
-    <li class="list-group-item active">Название: {{ task.title }}</li>
+    <li class="list-group-item active">Дата выполнения: {{ task.time_end }}</li>
+    <li class="list-group-item">Название: {{ task.title }}</li>
     <li class="list-group-item">Описание: {{ task.description }}</li>
     <li class="list-group-item">Текст: {{ task.text }}</li>
         <li class="list-group-item">Статус: {% if task.status == 1 %}<span class="text-success">Готова</span>{% elif task.status == None %}Не готова{% else %}<span class="text-danger">Отменена</span>{% endif %}</li>
-        <li class="list-group-item"><a href="{% url 'persons:update_task' task.id %}" class="btn btn-warning">Изменить</a> | <a href="{% url 'persons:delete_task' task.id %}" class="btn btn-danger" onclick="return confirm('Вы действительно хотите удалить эту задачу?')">Удалить</a> </li>
+        <li class="list-group-item btn-group"><a href="{% url 'persons:update_task' task.id %}" class="btn btn-warning">Изменить</a><a href="{% url 'persons:delete_task' task.id %}" class="btn btn-danger" onclick="return confirm('Вы действительно хотите удалить эту задачу?')">Удалить</a> </li>
     </ul>
 </div>
         <br>
