--- a/persons/templates/persons/task_list.html
+++ b/persons/templates/persons/task_list.html
@@ -2,7 +2,7 @@
 {% load person_tags %}
 {% block title %}Список задач{% endblock %}
 {% block content %}
-    <h1 class="text-primary text-center">Список задач. <br>Всего задач: {% task_count request.user.id %}</h1>
+    <h1 class="text-primary text-center">Список задач <sup class    ="text-danger">{% task_count request.user.id %}</sup></h1>
     <div class="container-fluid">
     <hr>
     <a href="{% url 'persons:create_task' %}" class="btn btn-success"> + Создать</a>
@@ -14,8 +14,8 @@
     <li class="list-group-item">Название: {{ task.title }}</li>
     <li class="list-group-item">Описание: {{ task.description }}</li>
     <li class="list-group-item">Текст: {{ task.text }}</li>
-        <li class="list-group-item">Статус: {% if task.status == 1 %}<span class="text-success">Готова</span>{% elif task.status == None %}Не готова{% else %}<span class="text-danger">Отменена</span>{% endif %}</li>
-        <li class="list-group-item btn-group"><a href="{% url 'persons:update_task' task.id %}" class="btn btn-warning">Изменить</a><a href="{% url 'persons:delete_task' task.id %}" class="btn btn-danger" onclick="return confirm('Вы действительно хотите удалить эту задачу?')">Удалить</a>{% if task.status == None %}<a href="{% url 'persons:end_task' task.id %}" class="btn btn-success">Завершить</a>{% endif %} </li>
+        <li class="list-group-item">Статус: {% if task.status == 1 %}<span class="text-success">Завершена</span>{% elif task.status == None %}Не завершена{% else %}<span class="text-danger">Отменена</span>{% endif %}</li>
+        <li class="list-group-item btn-group">{% if task.status != 1 %}<a href="{% url 'persons:update_task' task.id %}" class="btn btn-warning">Изменить</a>{% endif %}<a href="{% url 'persons:delete_task' task.id %}" class="btn btn-danger" onclick="return confirm('Вы действительно хотите удалить эту задачу?')">Удалить</a>{% if task.status == None %}<a href="{% url 'persons:end_task' task.id %}" class="btn btn-success">Завершить</a>{% endif %} </li>
     </ul>
 </div>
         <br>
