--- a/persons/templates/persons/admin_panel/admin_panel.html
+++ b/persons/templates/persons/admin_panel/admin_panel.html
@@ -17,7 +17,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for person in person_list %}
+    {% for person in objects %}
     <tr class="table">
         <td style="background: rgba(0, 0, 0, 0.1)">{{ forloop.counter }}</td>
         <td>{{ person.email }}</td>
@@ -31,4 +31,47 @@
     </tr>
   </tbody>
 </table>
+      <nav aria-label="Page navigation">
+            <ul class="pagination">
+                {% if objects.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page=1" aria-label="First">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ objects.previous_page_number }}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                        </a>
+                    </li>
+                {% endif %}
+
+                {% for page in objects.paginator.page_range %}
+                    {% if objects.number == page %}
+                        <li class="page-item active" aria-current="page">
+                            <a class="page-link" href="#">{{ page }}</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page }}">{{ page }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+
+                {% if objects.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ objects.next_page_number }}" aria-label="Next">
+                            <span aria-hidden="true">&gt;</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ objects.paginator.num_pages }}" aria-label="Last">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
+  </div>
+</div>
 {% endblock %}
