--- a/persons/templates/persons/task_list.html
+++ b/persons/templates/persons/task_list.html
@@ -2,23 +2,64 @@
 {% load person_tags %}
 {% block title %}Список задач{% endblock %}
 {% block content %}
-    <h1 class="text-primary text-center">Список задач <sup class    ="text-danger">{% task_count request.user.id %}</sup></h1>
+    <h1 class="text-primary text-center">Список задач <sup class="text-danger">{% task_count request.user.id %}</sup></h1>
     <div class="container-fluid">
     <hr>
     <a href="{% url 'persons:create_task' %}" class="btn btn-success"> + Создать</a>
     <hr>
-    {% for task in tasks %}
+    {% for task in objects %}
     <div class="card">
-    <ul class="list-group list-group-flush">
+    <ul class="list-group list-group-flush" {% if task.status == 1 %}style="opacity: 0.5" {% endif %}>
     <li class="list-group-item active">Дата выполнения: {{ task.time_end }}</li>
     <li class="list-group-item">Название: {{ task.title }}</li>
     <li class="list-group-item">Описание: {{ task.description }}</li>
     <li class="list-group-item">Текст: {{ task.text }}</li>
         <li class="list-group-item">Статус: {% if task.status == 1 %}<span class="text-success">Завершена</span>{% elif task.status == None %}Не завершена{% else %}<span class="text-danger">Отменена</span>{% endif %}</li>
-        <li class="list-group-item btn-group">{% if task.status != 1 %}<a href="{% url 'persons:update_task' task.id %}" class="btn btn-warning">Изменить</a>{% endif %}<a href="{% url 'persons:delete_task' task.id %}" class="btn btn-danger" onclick="return confirm('Вы действительно хотите удалить эту задачу?')">Удалить</a>{% if task.status == None %}<a href="{% url 'persons:end_task' task.id %}" class="btn btn-success">Завершить</a>{% endif %} </li>
+        <li class="list-group-item btn-group">{% if task.status != 1 %}<a href="{% url 'persons:update_task' task.id %}" class="btn btn-warning">Изменить</a>{% endif %}<a href="{% url 'persons:delete_task' task.id %}" class="btn btn-danger" onclick="return confirm('Вы действительно хотите удалить эту задачу?')">Удалить</a>{% if task.status == None %}<a href="{% url 'persons:end_task' task.id %}" class="btn btn-success">Завершить</a>{% endif %} {% if task.status == 1 %}<a href="{% url 'persons:return_task' task.id %}" class="btn btn-warning">Отменить</a>{% endif %} </li>
     </ul>
 </div>
         <br>
     {% endfor %}
     </div>
+      <nav aria-label="Page navigation">
+            <ul class="pagination">
+                {% if objects.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page=1" aria-label="First">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ objects.previous_page_number }}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                        </a>
+                    </li>
+                {% endif %}
+
+                {% for page in objects.paginator.page_range %}
+                    {% if objects.number == page %}
+                        <li class="page-item active" aria-current="page">
+                            <a class="page-link" href="#">{{ page }}</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page }}">{{ page }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+
+                {% if objects.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ objects.next_page_number }}" aria-label="Next">
+                            <span aria-hidden="true">&gt;</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ objects.paginator.num_pages }}" aria-label="Last">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
 {% endblock %}
