--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               {% if request.user.is_superuser %}
-          <li><a class="dropdown-item" href="{% url "persons:admin_panel" %}">Админ. панель</a></li>
+          <li><a class="dropdown-item" href="{% url "persons:admin_panel" %}">Админ панель</a></li>
               {% endif %}
           <li><a class="dropdown-item" href="{% url "persons:settings" %}">Настройки</a></li>
             <li><a class="dropdown-item" href="{% url "persons:logout" %}">Выход</a></li>
@@ -56,7 +56,7 @@
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 {% endif %}
-<div class="container-fluid">
+<div class="container-fluid" style="margin-top: 10px">
     {% block content %}
 {% endblock %}
 </div>
